[Doc] add info about regional sts (#65240)
Signed-off-by: DanRoscigno <dan@roscigno.com>
(cherry picked from commit b3fe1b97d1e5417d9e2f8a00fe3cf41a9b13b0af)

# Conflicts:
#	docs/en/sql-reference/sql-functions/table-functions/files.md
#	docs/ja/sql-reference/sql-functions/table-functions/files.md
#	docs/zh/sql-reference/sql-functions/table-functions/files.md